back to ApprovalTests again because sadly Verify doesn't work with NCrunch, progress on enum formatter code generation

--- a/MessagePack.Attributeless/CodeGeneration/EnumFormatterTemplate.tt
+++ b/MessagePack.Attributeless/CodeGeneration/EnumFormatterTemplate.tt
@@ -10,6 +10,7 @@ namespace <#= Namespace #>
 	{
 		public <#= FullTypeName #> Deserialize(ref MessagePackReader reader, MessagePackSerializerOptions options)
 		{
+			writer.<#= WriterMethod #>;
 		}
 		public void Serialize(ref MessagePackWriter writer, <#= FullTypeName #> value, MessagePackSerializerOptions options) 
 		{ 
