--- a/MessagePack.Attributeless/CodeGeneration/BaseTypeTemplate.tt
+++ b/MessagePack.Attributeless/CodeGeneration/BaseTypeTemplate.tt
@@ -3,15 +3,20 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
+
 namespace <#= Namespace #> 
 {
 	using MessagePack.Formatters;
 
 	public class <#= IdentifierTypeName #>Formatter: IMessagePackFormatter<<#= FullTypeName #>>
 	{
+		
 		public <#= FullTypeName #> Deserialize(ref MessagePackReader reader, MessagePackSerializerOptions options)
 		{
-			return (<#= FullTypeName #>) reader.<#= ReaderMethod #>()
+			if (reader.TryReadNil()) return default;
+
+			var key = reader.ReadInt32();
+
 		}
 		public void Serialize(ref MessagePackWriter writer, <#= FullTypeName #> value, MessagePackSerializerOptions options) 
 		{ 
